# puddle-backend

./: .env.example  .gitignore  ACID_IMPROVEMENTS.md  AI_AGENT_REWRITE.md  README.md  core_summary.md  mcp_server_files_pasted.txt  populate_synthetic_data.sql  puddle_backend_summary.md  pyproject.toml  schemas_summary.md  temp.txt  test_agent.py
app/: main.py
app/api/v1/: __init__.py
app/core/: ai_engine.py  auth.py  config.py  conversation_manager.py  db.py
app/crud/: agents.py  buyers.py  chat_messages.py  chats.py  crud_chat_message.py  crud_conversation.py  crud_inquiry.py  dataset_columns.py  datasets.py  users.py  vendors.py
app/models/: models.py
app/schemas/: agent.py  buyer.py  chat.py  chat_message.py  conversation.py  dataset.py  dataset_column.py  inquiry.py  user.py  vendor.py
app/services/: inquiry_service.py
app/tests/: conftest.py  test_datasets.py  test_datasets_search.py  test_vendors.py
app/tools/: acid_ai_tool.py
app/utils/: embedding_utils.py  mcp_client.py
extras/: README_SYNTHETIC_DATA.md  database-creation-script.sql  frontend-blueprint.md  generate_synthetic_data.py  openapi.json
extras/intermediate-text-and-summaries/: core.txt  crud.txt  crud_summary.md  models.txt  models_summary.md  routes.txt  routes_summary.md  schemas.txt
frontend/: index.html  package-lock.json  package.json  readme.md  start.sh
frontend/src/: App.jsx  index.css
frontend/src/components/: AcidAI.css  AcidAI.jsx  AcidChat.css  AcidChat.jsx  AgentManager.jsx  BuyerProfile.jsx  ChatMessage.css  ChatMessage.jsx  ConfirmationModal.css  ConfirmationModal.jsx  DataCatalog.css  DataCatalog.jsx  DatasetManager.jsx  DatasetProfile.jsx  Icons.jsx  InquiryList.css  InquiryList.jsx  Marketplace.css  Marketplace.jsx  PublicVendorProfile.jsx  TideChatMessage.css  TideChatMessage.jsx  TideInquiries.css  TideInquiries.jsx  ToolCallDisplay.css  ToolCallDisplay.jsx  (+1 more)
(+39 files in other folders)
