[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "faker>=37.12.0",
    "fastapi>=0.121.0",
    "httpx>=0.28.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic[email]>=2.12.4",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "python-jose>=3.5.0",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.20",
    "pgvector>=0.4.1",
    "bcrypt==4.0.1",
    "google-genai>=1.50.0",
    "psycopg2-binary>=2.9.11",
    "openai>=2.8.1",
    "mcp>=1.22.0",
    "python-dotenv>=1.2.1",
]
